--- a/src/component/Card/Card.css
+++ b/src/component/Card/Card.css
@@ -8,14 +8,13 @@
 body
 {
   font-family: 'Roboto', sans-serif;
-  overflow: hidden;
-  background: #d22222;;
+  overflow: hidden
 }
 
 div.widget
 {
   position: relative;
-  width: 355px;
+  width: 255px;
   height: 125px;
   background-color: #fcfdfd;
   border-radius: 9px;
@@ -60,8 +59,8 @@ div.panel
 div.right-panel
 {
   position: absolute;
-  float: right;
+  float: left;
   top: 0;
-  margin-top: 35px;
-  padding-left: 10px;
+  margin-top: 30px;
+  padding-left: 0px;
 }
